[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/stages/Stage22.gd" type="Script" id=1]
[ext_resource path="res://scenes/stages/extras/backgrounds/WinterBG.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tilesets/Snow.xml" type="TileSet" id=3]
[ext_resource path="res://scenes/stages/extras/KillZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/hazzards/Spikes.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/monsters/Bobo.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/monsters/Roco.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/monsters/RocoSteel.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/coins/Coin.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/coins/HorizontalCoin.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/hazzards/FireballUp.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/hazzards/RotatingFire.tscn" type="PackedScene" id=13]

[node name="Stage22" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Winter" parent="." instance=ExtResource( 2 )]

offset = Vector2( 0, -400 )

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 458759, 13, 458770, 8, 458819, 9, 458829, 9, 458874, 9, 458889, 9, 524289, 10, 524290, 10, 524291, 10, 524303, 11, 524319, 11, 524337, 11, 524369, 11, 524387, 11, 524391, 10, 524395, 8, 524403, 8, 589824, 17, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 589840, 0, 589841, 0, 589842, 14, 589853, 17, 589854, 0, 589855, 14, 589871, 17, 589872, 0, 589873, 0, 589874, 14, 589877, 8, 589882, 8, 589887, 8, 589890, 17, 589891, 0, 589892, 0, 589893, 0, 589894, 0, 589895, 0, 589896, 0, 589897, 0, 589898, 0, 589899, 0, 589900, 0, 589901, 0, 589902, 0, 589903, 0, 589904, 0, 589905, 14, 589921, 17, 589922, 0, 589923, 0, 589924, 0, 589925, 0, 589926, 0, 589927, 0, 589928, 14, 589944, 17, 589945, 0, 589946, 0, 589947, 0, 589948, 0, 589949, 0, 589950, 0, 589951, 0, 589952, 0, 589953, 0, 589954, 0, 589955, 0, 589956, 0, 589957, 0, 589958, 0, 589959, 0, 589960, 0, 589961, 0, 589962, 0, 589963, 14, 655360, 3, 655361, 4, 655362, 4, 655363, 4, 655364, 4, 655365, 4, 655366, 4, 655367, 4, 655368, 4, 655369, 4, 655370, 4, 655371, 4, 655372, 4, 655373, 4, 655374, 4, 655375, 4, 655376, 4, 655377, 4, 655378, 1, 655389, 3, 655390, 4, 655391, 1, 655407, 3, 655408, 4, 655409, 4, 655410, 1, 655426, 3, 655427, 4, 655428, 4, 655429, 4, 655430, 4, 655431, 4, 655432, 4, 655433, 4, 655434, 4, 655435, 4, 655436, 4, 655437, 4, 655438, 4, 655439, 4, 655440, 4, 655441, 1, 655442, 12, 655445, 12, 655448, 12, 655451, 12, 655454, 12, 655457, 3, 655458, 4, 655459, 4, 655460, 4, 655461, 4, 655462, 4, 655463, 4, 655464, 1, 655465, 12, 655468, 12, 655471, 12, 655474, 12, 655477, 12, 655480, 3, 655481, 4, 655482, 4, 655483, 4, 655484, 4, 655485, 4, 655486, 4, 655487, 4, 655488, 4, 655489, 4, 655490, 4, 655491, 4, 655492, 4, 655493, 4, 655494, 4, 655495, 4, 655496, 4, 655497, 4, 655498, 4, 655499, 1, 720896, 3, 720897, 4, 720898, 4, 720899, 4, 720900, 4, 720901, 4, 720902, 4, 720903, 4, 720904, 4, 720905, 4, 720906, 4, 720907, 4, 720908, 4, 720909, 4, 720910, 4, 720911, 4, 720912, 4, 720913, 4, 720914, 1, 720925, 3, 720926, 4, 720927, 1, 720928, 12, 720931, 12, 720934, 12, 720937, 12, 720940, 12, 720943, 3, 720944, 4, 720945, 4, 720946, 1, 720947, 12, 720950, 12, 720953, 12, 720956, 12, 720959, 12, 720962, 3, 720963, 4, 720964, 4, 720965, 4, 720966, 4, 720967, 4, 720968, 4, 720969, 4, 720970, 4, 720971, 4, 720972, 4, 720973, 4, 720974, 4, 720975, 4, 720976, 4, 720977, 1, 720993, 3, 720994, 4, 720995, 4, 720996, 4, 720997, 4, 720998, 4, 720999, 4, 721000, 1, 721016, 3, 721017, 4, 721018, 4, 721019, 4, 721020, 4, 721021, 4, 721022, 4, 721023, 4, 721024, 4, 721025, 4, 721026, 4, 721027, 4, 721028, 4, 721029, 4, 721030, 4, 721031, 4, 721032, 4, 721033, 4, 721034, 4, 721035, 1, 786432, 3, 786433, 4, 786434, 4, 786435, 4, 786436, 4, 786437, 4, 786438, 4, 786439, 4, 786440, 4, 786441, 4, 786442, 4, 786443, 4, 786444, 4, 786445, 4, 786446, 4, 786447, 4, 786448, 4, 786449, 4, 786450, 1, 786461, 3, 786462, 4, 786463, 1, 786479, 3, 786480, 4, 786481, 4, 786482, 1, 786498, 3, 786499, 4, 786500, 4, 786501, 4, 786502, 4, 786503, 4, 786504, 4, 786505, 4, 786506, 4, 786507, 4, 786508, 4, 786509, 4, 786510, 4, 786511, 4, 786512, 4, 786513, 1, 786529, 3, 786530, 4, 786531, 4, 786532, 4, 786533, 4, 786534, 4, 786535, 4, 786536, 1, 786552, 3, 786553, 4, 786554, 4, 786555, 4, 786556, 4, 786557, 4, 786558, 4, 786559, 4, 786560, 4, 786561, 4, 786562, 4, 786563, 4, 786564, 4, 786565, 4, 786566, 4, 786567, 4, 786568, 4, 786569, 4, 786570, 4, 786571, 1, 851968, 3, 851969, 4, 851970, 4, 851971, 4, 851972, 4, 851973, 4, 851974, 4, 851975, 4, 851976, 4, 851977, 4, 851978, 4, 851979, 4, 851980, 4, 851981, 4, 851982, 4, 851983, 4, 851984, 4, 851985, 4, 851986, 1, 851997, 3, 851998, 4, 851999, 1, 852015, 3, 852016, 4, 852017, 4, 852018, 1, 852034, 3, 852035, 4, 852036, 4, 852037, 4, 852038, 4, 852039, 4, 852040, 4, 852041, 4, 852042, 4, 852043, 4, 852044, 4, 852045, 4, 852046, 4, 852047, 4, 852048, 4, 852049, 1, 852065, 3, 852066, 4, 852067, 4, 852068, 4, 852069, 4, 852070, 4, 852071, 4, 852072, 1, 852088, 3, 852089, 4, 852090, 4, 852091, 4, 852092, 4, 852093, 4, 852094, 4, 852095, 4, 852096, 4, 852097, 4, 852098, 4, 852099, 4, 852100, 4, 852101, 4, 852102, 4, 852103, 4, 852104, 4, 852105, 4, 852106, 4, 852107, 1, 917504, 3, 917505, 4, 917506, 4, 917507, 4, 917508, 4, 917509, 4, 917510, 4, 917511, 4, 917512, 4, 917513, 4, 917514, 4, 917515, 4, 917516, 4, 917517, 4, 917518, 4, 917519, 4, 917520, 4, 917521, 4, 917522, 1, 917533, 3, 917534, 4, 917535, 1, 917551, 3, 917552, 4, 917553, 4, 917554, 1, 917570, 3, 917571, 4, 917572, 4, 917573, 4, 917574, 4, 917575, 4, 917576, 4, 917577, 4, 917578, 4, 917579, 4, 917580, 4, 917581, 4, 917582, 4, 917583, 4, 917584, 4, 917585, 1, 917601, 3, 917602, 4, 917603, 4, 917604, 4, 917605, 4, 917606, 4, 917607, 4, 917608, 1, 917624, 3, 917625, 4, 917626, 4, 917627, 4, 917628, 4, 917629, 4, 917630, 4, 917631, 4, 917632, 4, 917633, 4, 917634, 4, 917635, 4, 917636, 4, 917637, 4, 917638, 4, 917639, 4, 917640, 4, 917641, 4, 917642, 4, 917643, 1, 983040, 16, 983041, 2, 983042, 2, 983043, 2, 983044, 2, 983045, 2, 983046, 2, 983047, 2, 983048, 2, 983049, 2, 983050, 2, 983051, 2, 983052, 2, 983053, 2, 983054, 2, 983055, 2, 983056, 2, 983057, 2, 983058, 15, 983069, 16, 983070, 2, 983071, 15, 983087, 16, 983088, 2, 983089, 2, 983090, 15, 983106, 16, 983107, 2, 983108, 2, 983109, 2, 983110, 2, 983111, 2, 983112, 2, 983113, 2, 983114, 2, 983115, 2, 983116, 2, 983117, 2, 983118, 2, 983119, 2, 983120, 2, 983121, 15, 983137, 16, 983138, 2, 983139, 2, 983140, 2, 983141, 2, 983142, 2, 983143, 2, 983144, 15, 983160, 16, 983161, 2, 983162, 2, 983163, 2, 983164, 2, 983165, 2, 983166, 2, 983167, 2, 983168, 2, 983169, 2, 983170, 2, 983171, 2, 983172, 2, 983173, 2, 983174, 2, 983175, 2, 983176, 2, 983177, 2, 983178, 2, 983179, 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="KillZones" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="KillZone" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 539.727, 850 )

[node name="KillZone1" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 3315.33, 850 )

[node name="KillZone2" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 6500, 850 )

[node name="KillZone3" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 9000, 850 )

[node name="KillZone4" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( 10379.2, 838.607 )
transform/rot = 90.0

[node name="KillZone5" parent="KillZones" instance=ExtResource( 4 )]

transform/pos = Vector2( -949.667, 838.607 )
transform/rot = 90.0

[node name="Spikes" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Spikes1" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2080, 672 )

[node name="Spikes2" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2144, 672 )

[node name="Spikes3" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3296, 672 )

[node name="Spikes4" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2208, 672.085 )

[node name="Spikes5" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3360, 672 )

[node name="Spikes6" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2275.59, 672.19 )

[node name="Spikes7" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3552, 672 )

[node name="Spikes8" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2341.99, 672.599 )

[node name="Spikes9" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3488, 672 )

[node name="Spikes10" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2464, 672 )

[node name="Spikes11" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3616, 672 )

[node name="Spikes12" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2528, 672 )

[node name="Spikes13" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3680, 672 )

[node name="Spikes14" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2656, 672 )

[node name="Spikes15" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3808, 672 )

[node name="Spikes16" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2720, 672 )

[node name="Spikes17" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3872, 672 )

[node name="Spikes18" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2848, 672 )

[node name="Spikes19" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 3936, 672 )

[node name="Spikes20" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 4000, 672 )

[node name="Spikes21" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 4128, 672 )

[node name="Spikes22" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 4192, 672 )

[node name="Spikes23" parent="Spikes" instance=ExtResource( 5 )]

transform/pos = Vector2( 2912, 672 )

[node name="Monsters" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Bobo" parent="Monsters" instance=ExtResource( 6 )]

transform/pos = Vector2( 784, 528 )

[node name="Bobo1" parent="Monsters" instance=ExtResource( 6 )]

transform/pos = Vector2( 2518.64, 668.299 )

[node name="Bobo3" parent="Monsters" instance=ExtResource( 6 )]

transform/pos = Vector2( 5728.6, 606.772 )

[node name="Roco" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 4880, 544 )

[node name="Roco1" parent="Monsters" instance=ExtResource( 7 )]

transform/pos = Vector2( 8528, 544 )

[node name="RocoSteel" parent="Monsters" instance=ExtResource( 8 )]

transform/pos = Vector2( 2584.82, 662.299 )
transform/scale = Vector2( 1, 1.10147 )

[node name="Coins" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="Coin" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 1952, 544 )

[node name="Coin1" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 1184, 416 )

[node name="Coin2" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 3120, 528 )

[node name="Coin3" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 3744, 544 )

[node name="Coin4" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 4720, 544 )

[node name="Coin5" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 5584, 608 )

[node name="Coin6" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 6096, 608 )

[node name="Coin7" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 7152, 464 )

[node name="Coin8" parent="Coins" instance=ExtResource( 9 )]

transform/pos = Vector2( 6448, 528 )

[node name="Coin9" parent="Coins" instance=ExtResource( 10 )]

transform/pos = Vector2( 8112, 528 )

[node name="Player" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( 160, 496 )

[node name="Hazzards" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="FireballUp" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 5360, 900 )

[node name="FireballUp1" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 6096, 900 )

[node name="FireballUp2" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 5856, 900 )

[node name="FireballUp3" parent="Hazzards" instance=ExtResource( 12 )]

transform/pos = Vector2( 5584, 900 )

[node name="RotatingFire" parent="Hazzards" instance=ExtResource( 13 )]

transform/pos = Vector2( 6880, 528 )

[node name="RotatingFire1" parent="Hazzards" instance=ExtResource( 13 )]

transform/pos = Vector2( 7392, 528 )


